syntax = "proto3";

option go_package = "./service2";
package service2;

service Storage {
  rpc Put (PutRequest) returns (PutResponse) {}
  rpc Get (GetRequest) returns (GetResponse) {}
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {

}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}